# VideoChatRust

./: .gitignore  README.md
.github/workflows/: ci.yml
videochat/: Cargo.toml
videochat/frontend/: Cargo.toml  Trunk.toml  index.html
videochat/frontend/src/: lib.rs  signaling.rs  visitor_counter.rs  webrtc.rs
videochat/shared/src/: lib.rs
videochat/signaling/: Cargo.toml
videochat/signaling/src/: main.rs
