[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "HtmlVideoElement",
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "Navigator",
    "RtcPeerConnection",
    "RtcConfiguration",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcPeerConnectionIceEvent",
    "MessageEvent",
    "WebSocket",
    "RtcRtpSender",
    "RtcTrackEvent",
    "RtcSessionDescriptionInit",  # Needed for SDP offer/answer handling
    "RtcSdpType",                 # Needed for specifying Offer/Answer types
    "RtcIceServer",
    "RtcIceTransportPolicy",
    "RtcIceConnectionState",
    "MediaTrackConstraints"
] }
gloo = "0.7"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
js-sys = "0.3"
gloo-timers = { version = "0.2", features = ["futures"] }
wasm-logger = "0.2"
shared = { path = "../shared" }

